// Vitest Snapshot v1

exports[`FeatherTooltip > should hide tooltip on escape 1`] = `
<div>
  
  <teleport-stub
    to="body"
  >
    <transition-stub
      appear="false"
      css="false"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </teleport-stub>
  
  <button
    aria-describedby="feather-tooltip"
    data-feather-tooltip="feather-tooltip-trigger"
  >
    TOOLTIP BUTTON
  </button>
  
  
</div>
`;

exports[`FeatherTooltip > should not show a tooltip until hover 1`] = `
<div>
  
  <teleport-stub
    to="body"
  >
    <transition-stub
      appear="false"
      css="false"
      persisted="false"
    >
      <!--v-if-->
    </transition-stub>
  </teleport-stub>
  
  <button
    aria-describedby="feather-tooltip"
    data-feather-tooltip="feather-tooltip-trigger"
  >
    TOOLTIP BUTTON
  </button>
  
  
</div>
`;

exports[`FeatherTooltip > should show a tooltip on focus 1`] = `
<div>
  
  <teleport-stub
    to="body"
  >
    <transition-stub
      appear="false"
      css="false"
      persisted="false"
    >
      <div
        class="feather-tooltip-container center p-bottom"
        style="left: 0px; top: 0px;"
      >
        <div
          class="tooltip"
          id="feather-tooltip"
          role="tooltip"
        >
          hello world
        </div>
        <svg
          class="tooltip-pointer"
          fill="none"
          height="9"
          viewBox="0 0 32 9"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M8.01471 2.17157C7.26457 1.42143 6.24715 1 5.18629 1H0.5C0.223858 1 0 0.776142 0 0.5V0.5C0 0.223858 0.223858 0 0.5 0H31.5C31.7761 0 32 0.223858 32 0.5V0.5C32 0.776142 31.7761 1 31.5 1H27.1274C26.0666 1 25.0492 1.42143 24.299 2.17157L18.9853 7.4853C17.4232 9.04739 14.8905 9.04739 13.3284 7.48529L8.01471 2.17157Z"
            fill="var(--feather-high-visibility-on-surface)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </transition-stub>
  </teleport-stub>
  
  <button
    aria-describedby="feather-tooltip"
    data-feather-tooltip="feather-tooltip-trigger"
  >
    TOOLTIP BUTTON
  </button>
  
  
</div>
`;

exports[`FeatherTooltip > should show a tooltip on hover 1`] = `
<div>
  
  <teleport-stub
    to="body"
  >
    <transition-stub
      appear="false"
      css="false"
      persisted="false"
    >
      <div
        class="feather-tooltip-container center p-bottom"
        style="left: 0px; top: 0px;"
      >
        <div
          class="tooltip"
          id="feather-tooltip"
          role="tooltip"
        >
          hello world
        </div>
        <svg
          class="tooltip-pointer"
          fill="none"
          height="9"
          viewBox="0 0 32 9"
          width="32"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M8.01471 2.17157C7.26457 1.42143 6.24715 1 5.18629 1H0.5C0.223858 1 0 0.776142 0 0.5V0.5C0 0.223858 0.223858 0 0.5 0H31.5C31.7761 0 32 0.223858 32 0.5V0.5C32 0.776142 31.7761 1 31.5 1H27.1274C26.0666 1 25.0492 1.42143 24.299 2.17157L18.9853 7.4853C17.4232 9.04739 14.8905 9.04739 13.3284 7.48529L8.01471 2.17157Z"
            fill="var(--feather-high-visibility-on-surface)"
            fill-rule="evenodd"
          />
        </svg>
      </div>
    </transition-stub>
  </teleport-stub>
  
  <button
    aria-describedby="feather-tooltip"
    data-feather-tooltip="feather-tooltip-trigger"
  >
    TOOLTIP BUTTON
  </button>
  
  
</div>
`;
